--- a/functional_test/test-output/old/Automation/methods-not-run.html
+++ b/functional_test/test-output/old/Automation/methods-not-run.html
@@ -1,10 +1,14 @@
 <h2>Methods that were not run</h2><table>
 <tr><td>com.testscripts.Testcases.LoginWithValidTestdata</td></tr>
 <tr><td>com.testscripts.Testcases.PasswordRetry</td></tr>
+<tr><td>com.testscripts.Testcases.savingsBalanceBreakdown</td></tr>
 <tr><td>com.testscripts.Testcases.verifyHomepageOneAccount</td></tr>
 <tr><td>com.testscripts.Testcases.verifyHomepageNoAccounts</td></tr>
 <tr><td>com.testscripts.Testcases.verifyHomepageAllAccounts</td></tr>
 <tr><td>com.testscripts.Testcases.LoginWithInvalidPassword</td></tr>
 <tr><td>com.testscripts.Testcases.LoginWithEmptyData</td></tr>
+<tr><td>com.testscripts.Testcases.withLoanBalanceDetails</td></tr>
+<tr><td>com.testscripts.Testcases.ShowTenTransaction</td></tr>
+<tr><td>com.testscripts.Testcases.zeroLoanBalanceDetails</td></tr>
 <tr><td>com.testscripts.Testcases.LoginWithInvalidUsername</td></tr>
 </table>
