--- a/functional_test/test-output/old/Automation/classes.html
+++ b/functional_test/test-output/old/Automation/classes.html
@@ -47,6 +47,10 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>animation</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>LoginWithValidTestdata</td>
 <td>&nbsp;</td></tr>
 <tr>
