update method name start with small letter

--- a/functional_test/test-output/old/Automation/methods-alphabetical.html
+++ b/functional_test/test-output/old/Automation/methods-alphabetical.html
@@ -1,40 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Automation</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d37475">  <td>17/12/29 17:08:18</td>   <td>0</td> <td title="&lt;&lt;Testcases.CloseApp()[pri:0, instance:com.testscripts.Testcases@10a035a0]">&lt;&lt;CloseApp</td> 
+<tr bgcolor="d37475">  <td>18/01/04 10:42:16</td>   <td>0</td> <td title="&lt;&lt;Testcases.CloseApp()[pri:0, instance:com.testscripts.Testcases@10a035a0]">&lt;&lt;CloseApp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@797925218</td>   <td></td> </tr>
-<tr bgcolor="d37475">  <td>17/12/29 17:04:48</td>   <td>-210422</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.FeedBackButton()[pri:0, instance:com.testscripts.Testcases@10a035a0]">FeedBackButton</td> 
-  <td>main@797925218</td>   <td></td> </tr>
-<tr bgcolor="d37475">  <td>17/12/29 17:02:45</td>   <td>-332679</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.LogOutButton()[pri:0, instance:com.testscripts.Testcases@10a035a0]">LogOutButton</td> 
-  <td>main@797925218</td>   <td></td> </tr>
-<tr bgcolor="d37475">  <td>17/12/29 16:45:22</td>   <td>-1376529</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.LoginWithEmptyData()[pri:0, instance:com.testscripts.Testcases@10a035a0]">LoginWithEmptyData</td> 
-  <td>main@797925218</td>   <td></td> </tr>
-<tr bgcolor="d37475">  <td>17/12/29 16:48:37</td>   <td>-1181351</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.LoginWithInvalidPassword()[pri:0, instance:com.testscripts.Testcases@10a035a0]">LoginWithInvalidPassword</td> 
-  <td>main@797925218</td>   <td></td> </tr>
-<tr bgcolor="d37475">  <td>17/12/29 16:47:36</td>   <td>-1241976</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.LoginWithInvalidUsername()[pri:0, instance:com.testscripts.Testcases@10a035a0]">LoginWithInvalidUsername</td> 
-  <td>main@797925218</td>   <td></td> </tr>
-<tr bgcolor="d37475">  <td>17/12/29 16:46:21</td>   <td>-1316941</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.LoginWithValidTestdata()[pri:0, instance:com.testscripts.Testcases@10a035a0]">LoginWithValidTestdata</td> 
-  <td>main@797925218</td>   <td></td> </tr>
-<tr bgcolor="d37475">  <td>17/12/29 16:45:08</td>   <td>-1390600</td> <td title="&gt;&gt;Testcases.OpenApp()[pri:0, instance:com.testscripts.Testcases@10a035a0]">&gt;&gt;OpenApp</td> 
+<tr bgcolor="d37475">  <td>18/01/04 10:40:07</td>   <td>-128557</td> <td title="&gt;&gt;Testcases.OpenApp()[pri:0, instance:com.testscripts.Testcases@10a035a0]">&gt;&gt;OpenApp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@797925218</td>   <td></td> </tr>
-<tr bgcolor="d37475">  <td>17/12/29 16:49:38</td>   <td>-1120360</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.PasswordRetry()[pri:0, instance:com.testscripts.Testcases@10a035a0]">PasswordRetry</td> 
-  <td>main@797925218</td>   <td></td> </tr>
-<tr bgcolor="d37475">  <td>17/12/29 16:55:18</td>   <td>-780010</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.ShowTenTransaction()[pri:0, instance:com.testscripts.Testcases@10a035a0]">ShowTenTransaction</td> 
-  <td>main@797925218</td>   <td></td> </tr>
-<tr bgcolor="d37475">  <td>17/12/29 17:06:10</td>   <td>-128518</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.animation()[pri:0, instance:com.testscripts.Testcases@10a035a0]">animation</td> 
-  <td>main@797925218</td>   <td></td> </tr>
-<tr bgcolor="d37475">  <td>17/12/29 17:00:43</td>   <td>-455044</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.savingsBalanceBreakdown()[pri:0, instance:com.testscripts.Testcases@10a035a0]">savingsBalanceBreakdown</td> 
-  <td>main@797925218</td>   <td></td> </tr>
-<tr bgcolor="d37475">  <td>17/12/29 17:05:07</td>   <td>-190739</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.termsAndConditions()[pri:0, instance:com.testscripts.Testcases@10a035a0]">termsAndConditions</td> 
-  <td>main@797925218</td>   <td></td> </tr>
-<tr bgcolor="d37475">  <td>17/12/29 16:50:40</td>   <td>-1057850</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.verifyHomepageAllAccounts()[pri:0, instance:com.testscripts.Testcases@10a035a0]">verifyHomepageAllAccounts</td> 
-  <td>main@797925218</td>   <td></td> </tr>
-<tr bgcolor="d37475">  <td>17/12/29 16:54:07</td>   <td>-850647</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.verifyHomepageNoAccounts()[pri:0, instance:com.testscripts.Testcases@10a035a0]">verifyHomepageNoAccounts</td> 
-  <td>main@797925218</td>   <td></td> </tr>
-<tr bgcolor="d37475">  <td>17/12/29 16:52:54</td>   <td>-924343</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.verifyHomepageOneAccount()[pri:0, instance:com.testscripts.Testcases@10a035a0]">verifyHomepageOneAccount</td> 
-  <td>main@797925218</td>   <td></td> </tr>
-<tr bgcolor="d37475">  <td>17/12/29 16:56:37</td>   <td>-701396</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.withLoanBalanceDetails()[pri:0, instance:com.testscripts.Testcases@10a035a0]">withLoanBalanceDetails</td> 
-  <td>main@797925218</td>   <td></td> </tr>
-<tr bgcolor="d37475">  <td>17/12/29 16:58:38</td>   <td>-580243</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.zeroLoanBalanceDetails()[pri:0, instance:com.testscripts.Testcases@10a035a0]">zeroLoanBalanceDetails</td> 
+<tr bgcolor="d37475">  <td>18/01/04 10:40:19</td>   <td>-117089</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.withLoanBalanceDetails()[pri:0, instance:com.testscripts.Testcases@10a035a0]">withLoanBalanceDetails</td> 
   <td>main@797925218</td>   <td></td> </tr>
 </table>
