--- a/functional_test/test-output/old/Default suite/methods-alphabetical.html
+++ b/functional_test/test-output/old/Default suite/methods-alphabetical.html
@@ -1,30 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d2b987">  <td>17/12/11 14:01:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.FeedBack()[pri:0, instance:com.testscripts.Testcases@49993335]">FeedBack</td> 
-  <td>main@2142003995</td>   <td></td> </tr>
-<tr bgcolor="d2b987">  <td>17/12/11 14:01:23</td>   <td>1144</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.LogOutButton()[pri:0, instance:com.testscripts.Testcases@49993335]">LogOutButton</td> 
-  <td>main@2142003995</td>   <td></td> </tr>
-<tr bgcolor="d2b987">  <td>17/12/11 14:01:23</td>   <td>1174</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.LoginWithEmptyData()[pri:0, instance:com.testscripts.Testcases@49993335]">LoginWithEmptyData</td> 
-  <td>main@2142003995</td>   <td></td> </tr>
-<tr bgcolor="d2b987">  <td>17/12/11 14:01:23</td>   <td>1198</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.LoginWithInvalidPassword()[pri:0, instance:com.testscripts.Testcases@49993335]">LoginWithInvalidPassword</td> 
-  <td>main@2142003995</td>   <td></td> </tr>
-<tr bgcolor="d2b987">  <td>17/12/11 14:01:24</td>   <td>2271</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.LoginWithInvalidUsername()[pri:0, instance:com.testscripts.Testcases@49993335]">LoginWithInvalidUsername</td> 
-  <td>main@2142003995</td>   <td></td> </tr>
-<tr bgcolor="d2b987">  <td>17/12/11 14:01:24</td>   <td>2294</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.LoginWithValidTestdata()[pri:0, instance:com.testscripts.Testcases@49993335]">LoginWithValidTestdata</td> 
-  <td>main@2142003995</td>   <td></td> </tr>
-<tr bgcolor="d2b987">  <td>17/12/11 14:01:24</td>   <td>2314</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.PasswordRetry()[pri:0, instance:com.testscripts.Testcases@49993335]">PasswordRetry</td> 
-  <td>main@2142003995</td>   <td></td> </tr>
-<tr bgcolor="d2b987">  <td>17/12/11 14:01:25</td>   <td>3366</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.ShowTenTransaction()[pri:0, instance:com.testscripts.Testcases@49993335]">ShowTenTransaction</td> 
-  <td>main@2142003995</td>   <td></td> </tr>
-<tr bgcolor="d2b987">  <td>17/12/11 14:01:25</td>   <td>3393</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.VerifyHomepageAllAccounts()[pri:0, instance:com.testscripts.Testcases@49993335]">VerifyHomepageAllAccounts</td> 
-  <td>main@2142003995</td>   <td></td> </tr>
-<tr bgcolor="d2b987">  <td>17/12/11 14:01:25</td>   <td>3416</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.VerifyHomepageNoAccounts()[pri:0, instance:com.testscripts.Testcases@49993335]">VerifyHomepageNoAccounts</td> 
-  <td>main@2142003995</td>   <td></td> </tr>
-<tr bgcolor="d2b987">  <td>17/12/11 14:01:25</td>   <td>3441</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.VerifyHomepageOneAccount()[pri:0, instance:com.testscripts.Testcases@49993335]">VerifyHomepageOneAccount</td> 
-  <td>main@2142003995</td>   <td></td> </tr>
-<tr bgcolor="d2b987">  <td>17/12/11 14:01:25</td>   <td>3475</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.WithLoanBalanceDetails()[pri:0, instance:com.testscripts.Testcases@49993335]">WithLoanBalanceDetails</td> 
-  <td>main@2142003995</td>   <td></td> </tr>
-<tr bgcolor="d2b987">  <td>17/12/11 14:01:25</td>   <td>3576</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.ZeroLoanBalanceDetails()[pri:0, instance:com.testscripts.Testcases@49993335]">ZeroLoanBalanceDetails</td> 
-  <td>main@2142003995</td>   <td></td> </tr>
+<tr bgcolor="d37475">  <td>18/01/02 15:09:13</td>   <td>0</td> <td title="&lt;&lt;Testcases.CloseApp()[pri:0, instance:com.testscripts.Testcases@10a035a0]">&lt;&lt;CloseApp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@797925218</td>   <td></td> </tr>
+<tr bgcolor="d37475">  <td>18/01/02 15:08:14</td>   <td>-59556</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.LoginWithValidTestdata()[pri:0, instance:com.testscripts.Testcases@10a035a0]">LoginWithValidTestdata</td> 
+  <td>main@797925218</td>   <td></td> </tr>
+<tr bgcolor="d37475">  <td>18/01/02 15:08:02</td>   <td>-70796</td> <td title="&gt;&gt;Testcases.OpenApp()[pri:0, instance:com.testscripts.Testcases@10a035a0]">&gt;&gt;OpenApp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@797925218</td>   <td></td> </tr>
 </table>
