--- a/functional_test/test-output/old/Automation/methods-not-run.html
+++ b/functional_test/test-output/old/Automation/methods-not-run.html
@@ -1,17 +1,18 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>com.testscripts.Testcases.LoginWithValidTestdata</td></tr>
+<tr><td>com.testscripts.Testcases.logOutButton</td></tr>
 <tr><td>com.testscripts.Testcases.verifyHomepageNoAccounts</td></tr>
-<tr><td>com.testscripts.Testcases.LoginWithEmptyData</td></tr>
-<tr><td>com.testscripts.Testcases.ShowTenTransaction</td></tr>
+<tr><td>com.testscripts.Testcases.loginWithEmptyData</td></tr>
+<tr><td>com.testscripts.Testcases.loginWithValidTestdata</td></tr>
 <tr><td>com.testscripts.Testcases.zeroLoanBalanceDetails</td></tr>
-<tr><td>com.testscripts.Testcases.PasswordRetry</td></tr>
+<tr><td>com.testscripts.Testcases.loginWithInvalidUsername</td></tr>
+<tr><td>com.testscripts.Testcases.loginWithInvalidPassword</td></tr>
+<tr><td>com.testscripts.Testcases.feedBackButton</td></tr>
+<tr><td>com.testscripts.Testcases.showTenTransaction</td></tr>
+<tr><td>com.testscripts.Testcases.passwordRetry</td></tr>
 <tr><td>com.testscripts.Testcases.savingsBalanceBreakdown</td></tr>
 <tr><td>com.testscripts.Testcases.verifyHomepageOneAccount</td></tr>
-<tr><td>com.testscripts.Testcases.FeedBackButton</td></tr>
 <tr><td>com.testscripts.Testcases.verifyHomepageAllAccounts</td></tr>
-<tr><td>com.testscripts.Testcases.LogOutButton</td></tr>
-<tr><td>com.testscripts.Testcases.LoginWithInvalidPassword</td></tr>
-<tr><td>com.testscripts.Testcases.animation</td></tr>
-<tr><td>com.testscripts.Testcases.LoginWithInvalidUsername</td></tr>
+<tr><td>com.testscripts.Testcases.withLoanBalanceDetails</td></tr>
 <tr><td>com.testscripts.Testcases.termsAndConditions</td></tr>
+<tr><td>com.testscripts.Testcases.animation</td></tr>
 </table>
