--- a/functional_test/test-output/old/Default suite/methods-alphabetical.html
+++ b/functional_test/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,50 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d37475">  <td>18/01/02 15:09:13</td>   <td>0</td> <td title="&lt;&lt;Testcases.CloseApp()[pri:0, instance:com.testscripts.Testcases@10a035a0]">&lt;&lt;CloseApp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@797925218</td>   <td></td> </tr>
-<tr bgcolor="d37475">  <td>18/01/02 15:08:14</td>   <td>-59556</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.LoginWithValidTestdata()[pri:0, instance:com.testscripts.Testcases@10a035a0]">LoginWithValidTestdata</td> 
-  <td>main@797925218</td>   <td></td> </tr>
-<tr bgcolor="d37475">  <td>18/01/02 15:08:02</td>   <td>-70796</td> <td title="&gt;&gt;Testcases.OpenApp()[pri:0, instance:com.testscripts.Testcases@10a035a0]">&gt;&gt;OpenApp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@797925218</td>   <td></td> </tr>
+<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.animation()[pri:0, instance:com.testscripts.TestCases@2eda0940]">animation</td> 
+  <td>main@1263793464</td>   <td></td> </tr>
+<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.feedBackButton()[pri:0, instance:com.testscripts.TestCases@2eda0940]">feedBackButton</td> 
+  <td>main@1263793464</td>   <td></td> </tr>
+<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.logOutButton()[pri:0, instance:com.testscripts.TestCases@2eda0940]">logOutButton</td> 
+  <td>main@1263793464</td>   <td></td> </tr>
+<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.loginWithEmptyData()[pri:0, instance:com.testscripts.TestCases@2eda0940]">loginWithEmptyData</td> 
+  <td>main@1263793464</td>   <td></td> </tr>
+<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.loginWithInvalidPassword()[pri:0, instance:com.testscripts.TestCases@2eda0940]">loginWithInvalidPassword</td> 
+  <td>main@1263793464</td>   <td></td> </tr>
+<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.loginWithInvalidUsername()[pri:0, instance:com.testscripts.TestCases@2eda0940]">loginWithInvalidUsername</td> 
+  <td>main@1263793464</td>   <td></td> </tr>
+<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>25</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.loginWithValidTestdata()[pri:0, instance:com.testscripts.TestCases@2eda0940]">loginWithValidTestdata</td> 
+  <td>main@1263793464</td>   <td></td> </tr>
+<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>32</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.meToMeTransferfromChequingsListPage()[pri:0, instance:com.testscripts.TestCases@2eda0940]">meToMeTransferfromChequingsListPage</td> 
+  <td>main@1263793464</td>   <td></td> </tr>
+<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>37</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.meToMeTransferfromChequingsSummaryPage()[pri:0, instance:com.testscripts.TestCases@2eda0940]">meToMeTransferfromChequingsSummaryPage</td> 
+  <td>main@1263793464</td>   <td></td> </tr>
+<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>42</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.meToMeTransferfromSavingsListPage()[pri:0, instance:com.testscripts.TestCases@2eda0940]">meToMeTransferfromSavingsListPage</td> 
+  <td>main@1263793464</td>   <td></td> </tr>
+<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>46</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.meToMeTransferfromSavingsSummaryPage()[pri:0, instance:com.testscripts.TestCases@2eda0940]">meToMeTransferfromSavingsSummaryPage</td> 
+  <td>main@1263793464</td>   <td></td> </tr>
+<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>58</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.meToMetransfer()[pri:0, instance:com.testscripts.TestCases@2eda0940]">meToMetransfer</td> 
+  <td>main@1263793464</td>   <td></td> </tr>
+<tr bgcolor="808f91">  <td>18/01/17 12:46:23</td>   <td>-1084</td> <td title="&gt;&gt;TestCases.openApp()[pri:0, instance:com.testscripts.TestCases@2eda0940]">&gt;&gt;openApp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1263793464</td>   <td></td> </tr>
+<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>75</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.passwordRetry()[pri:0, instance:com.testscripts.TestCases@2eda0940]">passwordRetry</td> 
+  <td>main@1263793464</td>   <td></td> </tr>
+<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>78</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.savingsBalanceBreakdown()[pri:0, instance:com.testscripts.TestCases@2eda0940]">savingsBalanceBreakdown</td> 
+  <td>main@1263793464</td>   <td></td> </tr>
+<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>80</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.showTenTransaction()[pri:0, instance:com.testscripts.TestCases@2eda0940]">showTenTransaction</td> 
+  <td>main@1263793464</td>   <td></td> </tr>
+<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>83</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.termsAndConditions()[pri:0, instance:com.testscripts.TestCases@2eda0940]">termsAndConditions</td> 
+  <td>main@1263793464</td>   <td></td> </tr>
+<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>85</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.transfers()[pri:0, instance:com.testscripts.TestCases@2eda0940]">transfers</td> 
+  <td>main@1263793464</td>   <td></td> </tr>
+<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>86</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.verifyHomepageAllAccounts()[pri:0, instance:com.testscripts.TestCases@2eda0940]">verifyHomepageAllAccounts</td> 
+  <td>main@1263793464</td>   <td></td> </tr>
+<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>91</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.verifyHomepageNoAccounts()[pri:0, instance:com.testscripts.TestCases@2eda0940]">verifyHomepageNoAccounts</td> 
+  <td>main@1263793464</td>   <td></td> </tr>
+<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>93</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.verifyHomepageOneAccount()[pri:0, instance:com.testscripts.TestCases@2eda0940]">verifyHomepageOneAccount</td> 
+  <td>main@1263793464</td>   <td></td> </tr>
+<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>98</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.withLoanBalanceDetails()[pri:0, instance:com.testscripts.TestCases@2eda0940]">withLoanBalanceDetails</td> 
+  <td>main@1263793464</td>   <td></td> </tr>
+<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>100</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.zeroLoanBalanceDetails()[pri:0, instance:com.testscripts.TestCases@2eda0940]">zeroLoanBalanceDetails</td> 
+  <td>main@1263793464</td>   <td></td> </tr>
 </table>
