--- a/functional_test/test-output/old/Automation/methods-alphabetical.html
+++ b/functional_test/test-output/old/Automation/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Automation</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d37475">  <td>18/01/09 13:36:15</td>   <td>0</td> <td title="&lt;&lt;Testcases.closeApp()[pri:0, instance:com.testscripts.Testcases@10a035a0]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@797925218</td>   <td></td> </tr>
-<tr bgcolor="d37475">  <td>18/01/09 13:33:40</td>   <td>-155571</td> <td title="&gt;&gt;Testcases.openApp()[pri:0, instance:com.testscripts.Testcases@10a035a0]">&gt;&gt;openApp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@797925218</td>   <td></td> </tr>
-<tr bgcolor="d37475">  <td>18/01/09 13:33:51</td>   <td>-144677</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.transfers()[pri:0, instance:com.testscripts.Testcases@10a035a0]">transfers</td> 
-  <td>main@797925218</td>   <td></td> </tr>
+<tr bgcolor="86beff">  <td>18/01/18 16:10:35</td>   <td>0</td> <td title="&lt;&lt;TestCases.closeApp()[pri:0, instance:com.testscripts.TestCases@672872e1]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@895281180</td>   <td></td> </tr>
+<tr bgcolor="86beff">  <td>18/01/18 16:07:09</td>   <td>-206093</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.meToMetransfer()[pri:0, instance:com.testscripts.TestCases@672872e1]">meToMetransfer</td> 
+  <td>main@895281180</td>   <td></td> </tr>
+<tr bgcolor="86beff">  <td>18/01/18 16:06:58</td>   <td>-216292</td> <td title="&gt;&gt;TestCases.openApp()[pri:0, instance:com.testscripts.TestCases@672872e1]">&gt;&gt;openApp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@895281180</td>   <td></td> </tr>
 </table>
