--- a/functional_test/test-output/old/Automation/methods-not-run.html
+++ b/functional_test/test-output/old/Automation/methods-not-run.html
@@ -1,18 +1,23 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>com.testscripts.Testcases.logOutButton</td></tr>
-<tr><td>com.testscripts.Testcases.verifyHomepageNoAccounts</td></tr>
-<tr><td>com.testscripts.Testcases.loginWithEmptyData</td></tr>
-<tr><td>com.testscripts.Testcases.loginWithValidTestdata</td></tr>
-<tr><td>com.testscripts.Testcases.zeroLoanBalanceDetails</td></tr>
-<tr><td>com.testscripts.Testcases.loginWithInvalidUsername</td></tr>
-<tr><td>com.testscripts.Testcases.loginWithInvalidPassword</td></tr>
-<tr><td>com.testscripts.Testcases.feedBackButton</td></tr>
-<tr><td>com.testscripts.Testcases.showTenTransaction</td></tr>
-<tr><td>com.testscripts.Testcases.passwordRetry</td></tr>
-<tr><td>com.testscripts.Testcases.savingsBalanceBreakdown</td></tr>
-<tr><td>com.testscripts.Testcases.verifyHomepageOneAccount</td></tr>
-<tr><td>com.testscripts.Testcases.verifyHomepageAllAccounts</td></tr>
-<tr><td>com.testscripts.Testcases.withLoanBalanceDetails</td></tr>
-<tr><td>com.testscripts.Testcases.termsAndConditions</td></tr>
-<tr><td>com.testscripts.Testcases.animation</td></tr>
+<tr><td>com.testscripts.TestCases.transfers</td></tr>
+<tr><td>com.testscripts.TestCases.verifyHomepageNoAccounts</td></tr>
+<tr><td>com.testscripts.TestCases.logOutButton</td></tr>
+<tr><td>com.testscripts.TestCases.meToMeTransferfromChequingsSummaryPage</td></tr>
+<tr><td>com.testscripts.TestCases.loginWithInvalidPassword</td></tr>
+<tr><td>com.testscripts.TestCases.feedBackButton</td></tr>
+<tr><td>com.testscripts.TestCases.loginWithInvalidUsername</td></tr>
+<tr><td>com.testscripts.TestCases.zeroLoanBalanceDetails</td></tr>
+<tr><td>com.testscripts.TestCases.loginWithValidTestdata</td></tr>
+<tr><td>com.testscripts.TestCases.meToMeTransferfromSavingsListPage</td></tr>
+<tr><td>com.testscripts.TestCases.loginWithEmptyData</td></tr>
+<tr><td>com.testscripts.TestCases.verifyHomepageAllAccounts</td></tr>
+<tr><td>com.testscripts.TestCases.verifyHomepageOneAccount</td></tr>
+<tr><td>com.testscripts.TestCases.meToMeTransferfromSavingsSummaryPage</td></tr>
+<tr><td>com.testscripts.TestCases.savingsBalanceBreakdown</td></tr>
+<tr><td>com.testscripts.TestCases.passwordRetry</td></tr>
+<tr><td>com.testscripts.TestCases.showTenTransaction</td></tr>
+<tr><td>com.testscripts.TestCases.animation</td></tr>
+<tr><td>com.testscripts.TestCases.termsAndConditions</td></tr>
+<tr><td>com.testscripts.TestCases.withLoanBalanceDetails</td></tr>
+<tr><td>com.testscripts.TestCases.meToMeTransferfromChequingsListPage</td></tr>
 </table>
