update with latest code

--- a/functional_test/test-output/old/Automation/classes.html
+++ b/functional_test/test-output/old/Automation/classes.html
@@ -23,11 +23,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>meToMeTransferfromSavingsSummaryPage</td>
+<td>savingsBalanceBreakdown</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>savingsBalanceBreakdown</td>
+<td>meToMeTransferfromSavingsSummaryPage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -56,6 +56,10 @@
 <tr>
 <td>&nbsp;</td>
 <td>meToMeTransferfromChequingsSummaryPage</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>meToYouTransfer</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
