--- a/functional_test/test-output/old/Automation/methods-not-run.html
+++ b/functional_test/test-output/old/Automation/methods-not-run.html
@@ -2,6 +2,7 @@
 <tr><td>com.testscripts.TestCases.transfers</td></tr>
 <tr><td>com.testscripts.TestCases.verifyHomepageNoAccounts</td></tr>
 <tr><td>com.testscripts.TestCases.logOutButton</td></tr>
+<tr><td>com.testscripts.TestCases.meToYouTransfer</td></tr>
 <tr><td>com.testscripts.TestCases.meToMeTransferfromChequingsSummaryPage</td></tr>
 <tr><td>com.testscripts.TestCases.loginWithInvalidPassword</td></tr>
 <tr><td>com.testscripts.TestCases.feedBackButton</td></tr>
@@ -12,8 +13,8 @@
 <tr><td>com.testscripts.TestCases.loginWithEmptyData</td></tr>
 <tr><td>com.testscripts.TestCases.verifyHomepageAllAccounts</td></tr>
 <tr><td>com.testscripts.TestCases.verifyHomepageOneAccount</td></tr>
-<tr><td>com.testscripts.TestCases.meToMeTransferfromSavingsSummaryPage</td></tr>
 <tr><td>com.testscripts.TestCases.savingsBalanceBreakdown</td></tr>
+<tr><td>com.testscripts.TestCases.meToMeTransferfromSavingsSummaryPage</td></tr>
 <tr><td>com.testscripts.TestCases.passwordRetry</td></tr>
 <tr><td>com.testscripts.TestCases.showTenTransaction</td></tr>
 <tr><td>com.testscripts.TestCases.animation</td></tr>
