--- a/functional_test/test-output/old/Default suite/methods-alphabetical.html
+++ b/functional_test/test-output/old/Default suite/methods-alphabetical.html
@@ -1,50 +1,52 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.animation()[pri:0, instance:com.testscripts.TestCases@2eda0940]">animation</td> 
+<tr bgcolor="808f91">  <td>18/01/19 22:50:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.animation()[pri:0, instance:com.testscripts.Testcases@2eda0940]">animation</td> 
   <td>main@1263793464</td>   <td></td> </tr>
-<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.feedBackButton()[pri:0, instance:com.testscripts.TestCases@2eda0940]">feedBackButton</td> 
+<tr bgcolor="808f91">  <td>18/01/19 22:50:17</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.feedBackButton()[pri:0, instance:com.testscripts.Testcases@2eda0940]">feedBackButton</td> 
   <td>main@1263793464</td>   <td></td> </tr>
-<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.logOutButton()[pri:0, instance:com.testscripts.TestCases@2eda0940]">logOutButton</td> 
+<tr bgcolor="808f91">  <td>18/01/19 22:50:17</td>   <td>9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.logOutButton()[pri:0, instance:com.testscripts.Testcases@2eda0940]">logOutButton</td> 
   <td>main@1263793464</td>   <td></td> </tr>
-<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.loginWithEmptyData()[pri:0, instance:com.testscripts.TestCases@2eda0940]">loginWithEmptyData</td> 
+<tr bgcolor="808f91">  <td>18/01/19 22:50:17</td>   <td>14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.loginWithEmptyData()[pri:0, instance:com.testscripts.Testcases@2eda0940]">loginWithEmptyData</td> 
   <td>main@1263793464</td>   <td></td> </tr>
-<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.loginWithInvalidPassword()[pri:0, instance:com.testscripts.TestCases@2eda0940]">loginWithInvalidPassword</td> 
+<tr bgcolor="808f91">  <td>18/01/19 22:50:17</td>   <td>18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.loginWithInvalidPassword()[pri:0, instance:com.testscripts.Testcases@2eda0940]">loginWithInvalidPassword</td> 
   <td>main@1263793464</td>   <td></td> </tr>
-<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.loginWithInvalidUsername()[pri:0, instance:com.testscripts.TestCases@2eda0940]">loginWithInvalidUsername</td> 
+<tr bgcolor="808f91">  <td>18/01/19 22:50:17</td>   <td>20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.loginWithInvalidUsername()[pri:0, instance:com.testscripts.Testcases@2eda0940]">loginWithInvalidUsername</td> 
   <td>main@1263793464</td>   <td></td> </tr>
-<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>25</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.loginWithValidTestdata()[pri:0, instance:com.testscripts.TestCases@2eda0940]">loginWithValidTestdata</td> 
+<tr bgcolor="808f91">  <td>18/01/19 22:50:17</td>   <td>23</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.loginWithValidTestdata()[pri:0, instance:com.testscripts.Testcases@2eda0940]">loginWithValidTestdata</td> 
   <td>main@1263793464</td>   <td></td> </tr>
-<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>32</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.meToMeTransferfromChequingsListPage()[pri:0, instance:com.testscripts.TestCases@2eda0940]">meToMeTransferfromChequingsListPage</td> 
+<tr bgcolor="808f91">  <td>18/01/19 22:50:17</td>   <td>26</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.meToMeTransferfromChequingsListPage()[pri:0, instance:com.testscripts.Testcases@2eda0940]">meToMeTransferfromChequingsListPage</td> 
   <td>main@1263793464</td>   <td></td> </tr>
-<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>37</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.meToMeTransferfromChequingsSummaryPage()[pri:0, instance:com.testscripts.TestCases@2eda0940]">meToMeTransferfromChequingsSummaryPage</td> 
+<tr bgcolor="808f91">  <td>18/01/19 22:50:17</td>   <td>29</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.meToMeTransferfromChequingsSummaryPage()[pri:0, instance:com.testscripts.Testcases@2eda0940]">meToMeTransferfromChequingsSummaryPage</td> 
   <td>main@1263793464</td>   <td></td> </tr>
-<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>42</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.meToMeTransferfromSavingsListPage()[pri:0, instance:com.testscripts.TestCases@2eda0940]">meToMeTransferfromSavingsListPage</td> 
+<tr bgcolor="808f91">  <td>18/01/19 22:50:17</td>   <td>32</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.meToMeTransferfromSavingsListPage()[pri:0, instance:com.testscripts.Testcases@2eda0940]">meToMeTransferfromSavingsListPage</td> 
   <td>main@1263793464</td>   <td></td> </tr>
-<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>46</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.meToMeTransferfromSavingsSummaryPage()[pri:0, instance:com.testscripts.TestCases@2eda0940]">meToMeTransferfromSavingsSummaryPage</td> 
+<tr bgcolor="808f91">  <td>18/01/19 22:50:17</td>   <td>35</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.meToMeTransferfromSavingsSummaryPage()[pri:0, instance:com.testscripts.Testcases@2eda0940]">meToMeTransferfromSavingsSummaryPage</td> 
   <td>main@1263793464</td>   <td></td> </tr>
-<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>58</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.meToMetransfer()[pri:0, instance:com.testscripts.TestCases@2eda0940]">meToMetransfer</td> 
+<tr bgcolor="808f91">  <td>18/01/19 22:50:17</td>   <td>42</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.meToMetransfer()[pri:0, instance:com.testscripts.Testcases@2eda0940]">meToMetransfer</td> 
   <td>main@1263793464</td>   <td></td> </tr>
-<tr bgcolor="808f91">  <td>18/01/17 12:46:23</td>   <td>-1084</td> <td title="&gt;&gt;TestCases.openApp()[pri:0, instance:com.testscripts.TestCases@2eda0940]">&gt;&gt;openApp</td> 
+<tr bgcolor="808f91">  <td>18/01/19 22:50:17</td>   <td>46</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.meToYouTransfer()[pri:0, instance:com.testscripts.Testcases@2eda0940]">meToYouTransfer</td> 
+  <td>main@1263793464</td>   <td></td> </tr>
+<tr bgcolor="808f91">  <td>18/01/19 22:50:16</td>   <td>-1115</td> <td title="&gt;&gt;Testcases.openApp()[pri:0, instance:com.testscripts.Testcases@2eda0940]">&gt;&gt;openApp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1263793464</td>   <td></td> </tr>
-<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>75</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.passwordRetry()[pri:0, instance:com.testscripts.TestCases@2eda0940]">passwordRetry</td> 
+<tr bgcolor="808f91">  <td>18/01/19 22:50:17</td>   <td>47</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.passwordRetry()[pri:0, instance:com.testscripts.Testcases@2eda0940]">passwordRetry</td> 
   <td>main@1263793464</td>   <td></td> </tr>
-<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>78</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.savingsBalanceBreakdown()[pri:0, instance:com.testscripts.TestCases@2eda0940]">savingsBalanceBreakdown</td> 
+<tr bgcolor="808f91">  <td>18/01/19 22:50:17</td>   <td>49</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.savingsBalanceBreakdown()[pri:0, instance:com.testscripts.Testcases@2eda0940]">savingsBalanceBreakdown</td> 
   <td>main@1263793464</td>   <td></td> </tr>
-<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>80</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.showTenTransaction()[pri:0, instance:com.testscripts.TestCases@2eda0940]">showTenTransaction</td> 
+<tr bgcolor="808f91">  <td>18/01/19 22:50:17</td>   <td>51</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.showTenTransaction()[pri:0, instance:com.testscripts.Testcases@2eda0940]">showTenTransaction</td> 
   <td>main@1263793464</td>   <td></td> </tr>
-<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>83</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.termsAndConditions()[pri:0, instance:com.testscripts.TestCases@2eda0940]">termsAndConditions</td> 
+<tr bgcolor="808f91">  <td>18/01/19 22:50:17</td>   <td>53</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.termsAndConditions()[pri:0, instance:com.testscripts.Testcases@2eda0940]">termsAndConditions</td> 
   <td>main@1263793464</td>   <td></td> </tr>
-<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>85</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.transfers()[pri:0, instance:com.testscripts.TestCases@2eda0940]">transfers</td> 
+<tr bgcolor="808f91">  <td>18/01/19 22:50:17</td>   <td>54</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.transfers()[pri:0, instance:com.testscripts.Testcases@2eda0940]">transfers</td> 
   <td>main@1263793464</td>   <td></td> </tr>
-<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>86</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.verifyHomepageAllAccounts()[pri:0, instance:com.testscripts.TestCases@2eda0940]">verifyHomepageAllAccounts</td> 
+<tr bgcolor="808f91">  <td>18/01/19 22:50:17</td>   <td>59</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.verifyHomepageAllAccounts()[pri:0, instance:com.testscripts.Testcases@2eda0940]">verifyHomepageAllAccounts</td> 
   <td>main@1263793464</td>   <td></td> </tr>
-<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>91</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.verifyHomepageNoAccounts()[pri:0, instance:com.testscripts.TestCases@2eda0940]">verifyHomepageNoAccounts</td> 
+<tr bgcolor="808f91">  <td>18/01/19 22:50:17</td>   <td>61</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.verifyHomepageNoAccounts()[pri:0, instance:com.testscripts.Testcases@2eda0940]">verifyHomepageNoAccounts</td> 
   <td>main@1263793464</td>   <td></td> </tr>
-<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>93</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.verifyHomepageOneAccount()[pri:0, instance:com.testscripts.TestCases@2eda0940]">verifyHomepageOneAccount</td> 
+<tr bgcolor="808f91">  <td>18/01/19 22:50:17</td>   <td>64</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.verifyHomepageOneAccount()[pri:0, instance:com.testscripts.Testcases@2eda0940]">verifyHomepageOneAccount</td> 
   <td>main@1263793464</td>   <td></td> </tr>
-<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>98</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.withLoanBalanceDetails()[pri:0, instance:com.testscripts.TestCases@2eda0940]">withLoanBalanceDetails</td> 
+<tr bgcolor="808f91">  <td>18/01/19 22:50:17</td>   <td>66</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.withLoanBalanceDetails()[pri:0, instance:com.testscripts.Testcases@2eda0940]">withLoanBalanceDetails</td> 
   <td>main@1263793464</td>   <td></td> </tr>
-<tr bgcolor="808f91">  <td>18/01/17 12:46:24</td>   <td>100</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.zeroLoanBalanceDetails()[pri:0, instance:com.testscripts.TestCases@2eda0940]">zeroLoanBalanceDetails</td> 
+<tr bgcolor="808f91">  <td>18/01/19 22:50:17</td>   <td>68</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcases.zeroLoanBalanceDetails()[pri:0, instance:com.testscripts.Testcases@2eda0940]">zeroLoanBalanceDetails</td> 
   <td>main@1263793464</td>   <td></td> </tr>
 </table>
