--- a/functional_test/test-output/old/Automation/methods-not-run.html
+++ b/functional_test/test-output/old/Automation/methods-not-run.html
@@ -1,11 +1,12 @@
 <h2>Methods that were not run</h2><table>
 <tr><td>com.testscripts.TestCases.transfers</td></tr>
 <tr><td>com.testscripts.TestCases.verifyHomepageNoAccounts</td></tr>
+<tr><td>com.testscripts.TestCases.meToMetransfer</td></tr>
 <tr><td>com.testscripts.TestCases.logOutButton</td></tr>
 <tr><td>com.testscripts.TestCases.meToYouTransfer</td></tr>
 <tr><td>com.testscripts.TestCases.meToMeTransferfromChequingsSummaryPage</td></tr>
-<tr><td>com.testscripts.TestCases.loginWithInvalidPassword</td></tr>
 <tr><td>com.testscripts.TestCases.feedBackButton</td></tr>
+<tr><td>com.testscripts.TestCases.loginWithInvalidPassword</td></tr>
 <tr><td>com.testscripts.TestCases.loginWithInvalidUsername</td></tr>
 <tr><td>com.testscripts.TestCases.zeroLoanBalanceDetails</td></tr>
 <tr><td>com.testscripts.TestCases.loginWithValidTestdata</td></tr>
@@ -17,8 +18,9 @@
 <tr><td>com.testscripts.TestCases.meToMeTransferfromSavingsSummaryPage</td></tr>
 <tr><td>com.testscripts.TestCases.passwordRetry</td></tr>
 <tr><td>com.testscripts.TestCases.showTenTransaction</td></tr>
-<tr><td>com.testscripts.TestCases.animation</td></tr>
 <tr><td>com.testscripts.TestCases.termsAndConditions</td></tr>
+<tr><td>com.testscripts.TestCases.addBeneficiaryCorporate</td></tr>
+<tr><td>com.testscripts.TestCases.animation</td></tr>
 <tr><td>com.testscripts.TestCases.withLoanBalanceDetails</td></tr>
 <tr><td>com.testscripts.TestCases.meToMeTransferfromChequingsListPage</td></tr>
 </table>
