KRATOS-462 add the releated test cases

--- a/functional_test/test-output/old/Automation/methods-not-run.html
+++ b/functional_test/test-output/old/Automation/methods-not-run.html
@@ -1,24 +1,34 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>com.testscripts.TestCases.transfers</td></tr>
+<tr><td>com.testscripts.TestCases.addBeneficiaryRetail</td></tr>
 <tr><td>com.testscripts.TestCases.verifyHomepageNoAccounts</td></tr>
 <tr><td>com.testscripts.TestCases.logOutButton</td></tr>
 <tr><td>com.testscripts.TestCases.meToYouTransfer</td></tr>
 <tr><td>com.testscripts.TestCases.meToMeTransferfromChequingsSummaryPage</td></tr>
+<tr><td>com.testscripts.TestCases.reviewMeToYoutransfer</td></tr>
 <tr><td>com.testscripts.TestCases.loginWithInvalidPassword</td></tr>
-<tr><td>com.testscripts.TestCases.feedBackButton</td></tr>
 <tr><td>com.testscripts.TestCases.loginWithInvalidUsername</td></tr>
 <tr><td>com.testscripts.TestCases.zeroLoanBalanceDetails</td></tr>
+<tr><td>com.testscripts.TestCases.errorHandlingMetoMeBalanceAndExceed</td></tr>
 <tr><td>com.testscripts.TestCases.loginWithValidTestdata</td></tr>
 <tr><td>com.testscripts.TestCases.meToMeTransferfromSavingsListPage</td></tr>
-<tr><td>com.testscripts.TestCases.loginWithEmptyData</td></tr>
 <tr><td>com.testscripts.TestCases.verifyHomepageAllAccounts</td></tr>
-<tr><td>com.testscripts.TestCases.verifyHomepageOneAccount</td></tr>
 <tr><td>com.testscripts.TestCases.savingsBalanceBreakdown</td></tr>
 <tr><td>com.testscripts.TestCases.meToMeTransferfromSavingsSummaryPage</td></tr>
 <tr><td>com.testscripts.TestCases.passwordRetry</td></tr>
-<tr><td>com.testscripts.TestCases.showTenTransaction</td></tr>
+<tr><td>com.testscripts.TestCases.addBeneficiaryCorporate</td></tr>
 <tr><td>com.testscripts.TestCases.animation</td></tr>
-<tr><td>com.testscripts.TestCases.termsAndConditions</td></tr>
 <tr><td>com.testscripts.TestCases.withLoanBalanceDetails</td></tr>
+<tr><td>com.testscripts.TestCases.errorHandlingMetoMeOopsMessage</td></tr>
+<tr><td>com.testscripts.TestCases.transfers</td></tr>
+<tr><td>com.testscripts.TestCases.meToMetransfer</td></tr>
+<tr><td>com.testscripts.TestCases.errorHandlingMetoYouRestriction</td></tr>
+<tr><td>com.testscripts.TestCases.feedBackButton</td></tr>
+<tr><td>com.testscripts.TestCases.errorHandlingMetoYouBalanceAndExceed</td></tr>
+<tr><td>com.testscripts.TestCases.addBeneficiarySubmit</td></tr>
+<tr><td>com.testscripts.TestCases.loginWithEmptyData</td></tr>
+<tr><td>com.testscripts.TestCases.verifyHomepageOneAccount</td></tr>
+<tr><td>com.testscripts.TestCases.errorHandlingMetoYouOopsMessage</td></tr>
+<tr><td>com.testscripts.TestCases.showTenTransaction</td></tr>
+<tr><td>com.testscripts.TestCases.termsAndConditions</td></tr>
 <tr><td>com.testscripts.TestCases.meToMeTransferfromChequingsListPage</td></tr>
 </table>
